<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="school_circle_recommend_article">热帖推荐</string>
    <string name="homework_question_item_reply_number">回答</string>
    <string name="quanbu">全部</string>
    <string name="grade">年级</string>
    <string name="xiaoxue">小学</string>
    <string name="chuyi">七年级</string>
    <string name="chuer">八年级</string>
    <string name="chusan">九年级</string>
    <string name="zhongkao">中考</string>
    <string name="gaoyi">高一</string>
    <string name="gaoer">高二</string>
    <string name="gaosan">高三</string>
    <string name="gaokao">高考</string>
    <string name="subject">学科</string>
    <string name="shuxue">数学</string>
    <string name="yuwen">语文</string>
    <string name="yingyu">英语</string>
    <string name="wuli">物理</string>
    <string name="huaxue">化学</string>
    <string name="shengwu">生物</string>
    <string name="zhengzhi">政治</string>
    <string name="lishi">历史</string>
    <string name="dili">地理</string>
    
    <string name="cancel">取消</string>
	<string name="ok">确定</string>
    <string name="app_name">大学通</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">你好</string>
    <string name="login_label_username">账 号：</string>
    <string name="login_username_hint">电子邮箱或手机号码：</string>
    <string name="label_password">密    码:</string>
    <string name="label_retpassword">确认密 码:</string>
    <string name="regist_label_email">邮箱：</string>
    <string name="regist_label_mobilenumber">手机号码:</string>
    <string name="regist_label_yanzhengma">验    证    码:</string>
    <string name="regist_label_queren">确认</string>
    <string name="regist_label_sendmobilenumber">发送验证码</string>
    <string name="regist_label_notEnoughBit">您输入的位数不对</string>
    <string name="regist_label_registFailed">注册失败</string>
    <string name="regist_label_registOK">注册成功</string>
    <string name="age">年龄</string>
    <string name="number">学号</string>
    <string name="address">地址</string>
    <string name="hobby">爱好</string>
    <string name="login_label_signin">登  入</string>
    <string name="login_label_regist">注 册</string>
    <string name="searchbook">搜索书籍</string>
    <string name="time">00:00:00</string>
    <string name="notchoose">您还没有选择文件</string>
    <string name="allVideo">所有媒体：</string>
    <string name="camera_label_myquestion">我的提问</string>
    <string name="camera_label_submit">提交</string>
    <string name="camera_label_promt">请用最精炼的语言，描述你的作业问题，一次只能问一题，更容易找到大神的回答哦</string>
    <string name="camera_label_ask_superscholar">问学霸</string>
    <string name="camera_label_ask_teacher">问老师</string>
    <string name="login_label_usernameOrPasswordIsNotNull">帐号或者密码不能为空</string>
    <string name="login_label_usernameOrPasswordIsNotValid">帐号无效,请用邮箱或电话</string>
</resources>