<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login">
    <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
  		
  	<RelativeLayout 
  	    android:id="@+id/login_div"
  	    android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:padding="15dip"        
    	android:layout_margin="15dip" 
    	android:background="@drawable/background_login_div" >
  		<!-- 邮箱 -->
    	<TextView 
    		android:id="@+id/login_user_input"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentTop="true"
    		android:layout_marginTop="5dp"
    		android:text="@string/login_label_username"
    		style="@style/AppBaseTheme"/>
    	<EditText 
    	    style="@style/my_edittext_style"
    		android:id="@+id/username"
    		android:layout_width="fill_parent"
    		android:layout_height="40dp"
    		android:layout_marginTop="5dp"
    		android:hint="@string/login_username_hint"
    		android:layout_below="@id/login_user_input"
    		android:singleLine="true"
    		android:inputType="text"/>
      <!-- 密码 text -->
      <TextView 
      	android:id="@+id/login_password_input"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:layout_below="@id/username"
      	android:layout_marginTop="10dp"
      	android:text="@string/label_password"
      	style="@style/AppBaseTheme"/>
      <EditText
        style="@style/my_edittext_style"
      	android:id="@+id/password"
      	android:layout_width="fill_parent"
      	android:layout_height="40dp"
      	android:layout_marginTop="5dp"
      	android:layout_below="@id/login_password_input"
      	android:singleLine="true"
      	android:inputType="textPassword" />
      <!-- 登录button -->
      <Button 
      	android:id="@+id/signin_button"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:layout_below="@id/password"
      	android:layout_marginTop="10dp"
      	android:layout_alignRight="@id/password"
      	android:text="@string/login_label_signin"
      	android:background="@drawable/login_btn_selector" />
            <!-- 注册button -->
      <Button 
      	android:id="@+id/toregist_button"
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
      	android:layout_below="@id/password"
      	android:layout_marginLeft="10dp"
      	android:layout_marginTop="10dp"
      	android:text="@string/login_label_regist"
      	android:background="@drawable/login_btn_selector" />
  	</RelativeLayout>
</LinearLayout>
